# windportal

./: .gitignore  LICENSE.md  README.md  deler.md  log.md  parts.md  planning.md
ansible/: README.md  ansible.cfg  display-base.yml  display.yml  hosts  hub.yml
ansible/group_vars/all/: exim4_sendgrid.yml  exim4_sendgrid_passwd.yml  mobile-network-secrets.yml  mobile-network.yml  mosquitto.yml  mqtt_secrets.yml  mqtt_users.yml  root_alias.yml  sendgrid_passwd.yml  ssh-call-home-secrets.yml  ssh-call-home.yml  users.yml  users_secrets.yml  windportal_web_secrets.yml
ansible/roles/display-firmware/files/etc/systemd/system/: display-firmata.service  display-firmware.service  display-forwarder.service  display-gust.service  display-mqtt.service  display-status-led.service  display-status-led.timer  display-visuals.service
ansible/roles/display-firmware/tasks/: main.yml
ansible/roles/display_boot_config/tasks/: main.yml
ansible/roles/exim4_sendgrid/handlers/: main.yml
ansible/roles/exim4_sendgrid/tasks/: main.yml
ansible/roles/linux-base/: main.yml
ansible/roles/linux-base/tasks/: main.yml
ansible/roles/mobile-network/tasks/: main.yml
ansible/roles/mosquitto-server/files/etc/mosquitto/conf.d/: ansible.conf
ansible/roles/mosquitto-server/tasks/: main.yml
ansible/roles/mosquitto_broker/files/etc/mosquitto/: acl
ansible/roles/mosquitto_broker/tasks/: main.yml
ansible/roles/mosquitto_broker/templates/etc/mosquitto/: acl.j2
ansible/roles/mosquitto_broker/templates/etc/mosquitto/conf.d/: ansible.conf.j2
ansible/roles/network/tasks/: main.yml
ansible/roles/raspberrypi/tasks/: main.yml
ansible/roles/root_alias/tasks/: main.yml
ansible/roles/sendgrid/tasks/: main.yml
ansible/roles/ssh-call-home-device/tasks/: main.yml
ansible/roles/ssh-call-home-device/templates/etc/systemd/system/: ssh-call-home.service.j2
ansible/roles/ssh-call-home-server/tasks/: main.yml
ansible/roles/ssh-call-home/tasks/: main.yml
ansible/roles/unattended_upgrades/tasks/: main.yml
ansible/roles/windportal_web/files/etc/nginx/sites-available/: default
ansible/roles/windportal_web/files/etc/systemd/system/: windportal_web.service
ansible/roles/windportal_web/tasks/: main.yml
debugging/: no_button_action.md
doc/: udev-mm-notes.md
doc/diagrams/: Makefile  software.blockdiag
electronics/: baseboard-1.dxf  baseboard.fcstd  block_diagram.dia  psu.dxf  psu.fcstd
firmware/: README.md  display.py  fancontrol.py  firmata_ipc.py  firmata_proxy.py  gauge.py  gpio.py  gust_gui.py  requirements.txt  set_button.py  set_wind_speed.py  test_display.py  test_gust.py  wp_firmata.py  wp_forwarder.py  wp_gust.py  wp_ipc.py  wp_mqtt.py  wp_status.sh
firmware/wp_visuals/: .gitignore  Makefile.am  autogen_glfw.sh  autogen_vc.sh  autogen_vc_cross.sh  configure.ac  debian_dependencies.txt
firmware/wp_visuals/scripts/: rebuild.sh  reload.sh  reload_cgdb.sh
firmware/wp_visuals/src/: gl.h  io.h  platform.cc  platform.h  platform_glfw.cc  platform_vc.cc  reload.cc  reload_main.h  run.cc  sl.h  visuals.cc
server/: data.py  requirements.txt  test_server.py  wp_web.py
template-example/roles/home/defaults/: main.yml
template-example/roles/home/tasks/: main.yml
template-example/roles/home/templates/: .Xdefaults.j2
